welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
if (!estFaceMur) {
^Balin:18: error: ';' expected but 'else' found.
} else {
  ^